error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/bug.py", line 20
    else:
    ^^^^
SyntaxError: invalid syntax
